Allow fork/await failures to be handled by user code
fork/awaitAll/awaitAny is now all or nothing - if any given command is unschedulable, none of the commands will be scheduled and a failure result object will be returned to the user code to handle

However, if the coroutine's `cancelOnForkFailure` flag is `true` (which is the default), the failure will immediately yield the coroutine and cancel the entire composition with no chance for user interaction. Interrupt events will be issued and attributed to the first conflicting command that prevented the child command(s) from being scheduled